--- a/css/estilo.css
+++ b/css/estilo.css
@@ -106,10 +106,13 @@ span {
 }
 
 .nomeUsuario {
+    font-size: 3vw;
+    padding: 5px;
+    width: 80%;
+    background-color: #249f41;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     color: white;
-    position: absolute;
-    top: 5px;
-    right: 5px;
 }
 
 .telaOffline {
@@ -217,7 +220,7 @@ span {
 
 .botoesMenu {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     flex-direction: column;
     width: 100%;
@@ -851,6 +854,10 @@ input[type="file"] {
 
 @media screen and (orientation: landscape),
 screen and (min-aspect-ratio: 13/9) {
+
+    .nomeUsuario {
+        font-size: 1.5vw;
+    }
 
     .rodape-formulario span {
         font-size: 2vw;
