--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,25 +11,33 @@ html {
     flex-direction: column;
 }
 
-.painel-clientes {
+.cabecalho-clientes {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: end;
+    gap: 10px;
+    width: 100%;
+    background-color: #222222ec;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 5px;
+}
+
+.cabecalho-clientes button {
+    border-radius: 7px;
+}
+
+.painel-clientes {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
     width: 90vw;
-    height: 70vh;
-    background-color: #0000005e;
-    border-radius: 3px;
+    background-color: #d2d2d2;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .painel-clientes div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: white;
-    padding: 10px;
-    border-radius: 2px;
-    height: 20vh;
+    margin: 2vw;
 }
 
 .plano-fundo {
@@ -339,7 +347,7 @@ button {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.painelCadastro {
+.painel-cadastro {
     display: flex;
     align-items: start;
     justify-content: start;
@@ -351,18 +359,18 @@ button {
     overflow-y: auto;
 }
 
-.painelCadastro table {
+.painel-cadastro table {
     border-collapse: collapse;
     width: 100%;
 }
 
-.painelCadastro td {
+.painel-cadastro td {
     background-color: white;
     border: solid 1px #676767;
     padding: 8px;
 }
 
-.painelCadastro th {
+.painel-cadastro th {
     background-color: #676767;
     color: white;
     padding: 8px;
@@ -855,6 +863,10 @@ input[type="file"] {
 @media screen and (orientation: landscape),
 screen and (min-aspect-ratio: 13/9) {
 
+    .painel-clientes {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
     .nomeUsuario {
         font-size: 1.5vw;
     }
@@ -1005,7 +1017,7 @@ screen and (min-aspect-ratio: 13/9) {
         padding: 2vw;
     }
 
-    .painelCadastro {
+    .painel-cadastro {
         padding: 5vw;
     }
 
