--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,6 +23,44 @@ html {
     padding: 5px;
 }
 
+.circular-loader {
+    position: relative;
+    width: 120px;
+    height: 120px;
+}
+
+.circular-loader svg {
+    transform: rotate(-90deg);
+    width: 100%;
+    height: 100%;
+}
+
+.circular-loader circle {
+    fill: none;
+    stroke-width: 10;
+    stroke-linecap: round;
+}
+
+.circular-loader .bg {
+    stroke: #333;
+}
+
+.circular-loader .progress {
+    stroke: #4caf50;
+    stroke-dasharray: 314;
+    stroke-dashoffset: 314;
+    transition: stroke-dashoffset 0.3s linear;
+}
+
+.circular-loader .percentage {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 24px;
+}
+
 .cabecalho-clientes button {
     border-radius: 7px;
 }
@@ -232,6 +270,14 @@ span {
     gap: 1vw;
 }
 
+.nomeUsuario {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+    margin-bottom: 5vw;
+}
+
 .nomeUsuario span {
     font-size: 5vw;
     padding: 5px;
@@ -242,10 +288,9 @@ span {
     color: white;
 }
 
-
 .botoesMenu {
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: start;
     flex-direction: column;
     width: 100%;
@@ -919,6 +964,10 @@ input[type="file"] {
 
 @media screen and (orientation: landscape),
 screen and (min-aspect-ratio: 13/9) {
+
+    .nomeUsuario span {
+        font-size: 2vw;
+    }
 
     .fotos {
         grid-template-columns: repeat(3, 1fr);
