--- a/css/estilo.css
+++ b/css/estilo.css
@@ -91,6 +91,7 @@ html {
     width: 90vw;
     background-color: #0000005e;
     border-radius: 5px;
+    color: white;
 }
 
 .foto {
@@ -615,10 +616,11 @@ button {
 .rodapeTabela {
     border-top: 1px solid #666666;
     width: 100%;
-    height: 2vh;
+    min-height: 2vh;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: #b1b1b1;
+    padding: 0.5rem;
 }
 
 .btnRodape {
@@ -802,7 +804,6 @@ input[type="file"] {
 }
 
 .telaInterna {
-    color: white;
     padding: 2vw 1vw;
 }
 
