--- a/css/estilo.css
+++ b/css/estilo.css
@@ -320,7 +320,7 @@ span {
 }
 
 .cadeado {
-    width: 15vw;
+    width: 5rem;
 }
 
 .overlay {
@@ -683,7 +683,7 @@ input[type="file"] {
 }
 
 .mensagem img {
-    width: 10vw;
+    width: 3rem;
 }
 
 .pesquisa {
@@ -1019,11 +1019,6 @@ screen and (min-aspect-ratio: 13/9) {
     .pesquisa img,
     .detalhes img {
         width: 3vw;
-    }
-
-    .mensagem img,
-    .cadeado {
-        width: 7vw;
     }
 
     .recorteTabela {
