--- a/css/estilo.css
+++ b/css/estilo.css
@@ -305,7 +305,7 @@ span {
 }
 
 .botaoSuperiorLogin img {
-    width: 10vw;
+    width: 4rem;
 }
 
 .baixoLogin {
@@ -465,7 +465,7 @@ button {
 }
 
 .epis img {
-    width: 15vw;
+    width: 4rem;
 }
 
 .megaInput {
@@ -744,10 +744,11 @@ input[type="file"] {
 }
 
 .edicao img {
-    width: 7vw;
+    width: 2rem;
 }
 
 .btnAcmp {
+    width: 2rem;
     border-radius: 5px;
     padding: 3px;
     background-color: #dbdbdb;
@@ -859,7 +860,7 @@ input[type="file"] {
     position: absolute;
     top: 10px;
     right: 10px;
-    width: 10vw;
+    width: 4rem;
 }
 
 .painel-1-tarefas {
@@ -1037,18 +1038,6 @@ screen and (min-aspect-ratio: 13/9) {
     .painel-cadastro {
         max-height: 50vh;
         padding: 5vw;
-    }
-
-    .atualizar,
-    .epis img,
-    .botaoSuperiorLogin img {
-        width: 5vw;
-    }
-
-    .olho,
-    .edicao img,
-    .cam {
-        width: 3vw;
     }
 
     .contornoInterno img {
