--- a/css/estilo.css
+++ b/css/estilo.css
@@ -518,7 +518,7 @@ button {
 }
 
 .tabela {
-    min-width: max-content;
+    min-width: 100%;
     background-color: white;
     border-collapse: collapse;
 }
@@ -543,6 +543,10 @@ button {
     text-align: center;
     padding: 3px;
     border: 1px solid #d2d2d2;
+}
+
+.tabela span {
+    text-align: left;
 }
 
 .tabela thead {
@@ -599,12 +603,11 @@ button {
 }
 
 .painelBotoes {
-    position: relative;
     border-bottom: 1px solid #666666;
     min-height: 4vh;
     display: flex;
     align-items: start;
-    justify-content: start;
+    justify-content: space-between;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     background-color: #b1b1b1;
@@ -859,9 +862,6 @@ input[type="file"] {
 }
 
 .atualizar {
-    position: absolute;
-    top: 10px;
-    right: 10px;
     width: 3rem;
 }
 
