--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,76 @@ hr {
     width: 100%;
 }
 
+.painel-padrao {
+    background: linear-gradient(45deg, #249f41, #151749);
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    max-height: 70vh;
+    max-width: 900px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    padding: 10px;
+    border-radius: 3px;
+    border: solid 1px #797979;
+    margin: 10px 0 10px 0;
+}
+
+.linha-padrao {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid #444;
+    padding: 6px 10px;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+.linha-clientes input,
+.linha-clientes select,
+.linha-clientes textarea {
+    width: 95%;
+    cursor: pointer;
+    background-color: #e1e1e1;
+    border-radius: 3px;
+    padding: 5px;
+    border: solid 1px #bbbbbb;
+}
+
+.rodape-painel-clientes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #868686ff;
+    width: 100%;
+    gap: 1px;
+    border-top: solid 1px #868686ff;
+}
+
+.botoes-rodape {
+    width: 100%;
+    cursor: pointer;
+    padding: 5px;
+    background-color: #d2d2d2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    height: 5vh;
+}
+
+.botoes-rodape img {
+    width: 2rem;
+}
+
+.botoes-rodape:hover {
+    transition: ease-in-out 0.1s;
+    background-color: #097fe6;
+    color: white;
+}
+
 .cabecalho-clientes {
     display: flex;
     align-items: center;
@@ -155,12 +225,13 @@ img {
     background-color: #99999940;
 }
 
-.contornoInterno img {
-    width: 5vw
+.div-mensagem {
+    font-size: 1.2rem;
+    color: white;
 }
 
-span {
-    color: black;
+.contornoInterno img {
+    width: 5vw
 }
 
 .nomeUsuario {
