--- a/css/estilo.css
+++ b/css/estilo.css
@@ -998,8 +998,25 @@ input[type="file"] {
     margin-bottom: 20px;
 }
 
+.riscado {
+    text-decoration: line-through
+}
+
 .tabela-especialidade {
     margin-bottom: 1rem;
+}
+
+.gerenciar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+}
+
+.gerenciar img {
+    background-color: #d7d7d7;
+    border-radius: 3px;
+    padding: 3px;
 }
 
 .tabTarefas {
@@ -1009,6 +1026,11 @@ input[type="file"] {
     flex-direction: column;
     width: 100%;
     gap: 0.5rem;
+}
+
+.tabTarefas table td:nth-child(3),
+.tabTarefas table th:nth-child(3) {
+    width: 35vw;
 }
 
 .tabTarefas td {
@@ -1079,16 +1101,6 @@ screen and (min-aspect-ratio: 13/9) {
         table-layout: fixed;
         border-collapse: collapse;
         display: table;
-    }
-
-    .tabTarefas table td:nth-child(3),
-    .tabTarefas table th:nth-child(3) {
-        width: 35vw;
-    }
-
-    .tabTarefas table td:nth-child(4),
-    .tabTarefas table th:nth-child(4) {
-        width: 35vw;
     }
 
     .painel-1-tarefas {
