--- a/css/orcamentos.css
+++ b/css/orcamentos.css
@@ -61,3 +61,25 @@
     align-items: center;
     justify-content: center;
 }
+
+.medida-fixa {
+    width: 10rem;
+}
+
+.campo-on {
+    width: 5rem;
+    display: inline-block;
+    padding: 0.5rem;
+    border: solid 1px #00a4a4;
+    border-radius: 5px;
+    background-color: #00ffff;
+}
+
+.campo-off {
+    width: 5rem;
+    display: inline-block;
+    padding: 0.5rem;
+    border: solid 1px #d0d0d0;
+    border-radius: 5px;
+    background-color: #5f5f5f;
+}
