--- a/css/chat.css
+++ b/css/chat.css
@@ -42,6 +42,8 @@
 
 .mensagens-funcao {
     width: 100%;
+    height: 60vh;
+    overflow-y: auto;
     padding: 0.5rem;
     gap: 1px;
     background-color: #d2d2d2;
@@ -70,11 +72,11 @@
 }
 
 .m-sagem-S {
+    gap: 0.5rem;
     width: 100%;
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: start;
-    flex-direction: column;
     text-align: left;
     background-color: #ffffff;
     border-radius: 3px;
@@ -82,11 +84,11 @@
 }
 
 .m-sagem-N {
+    gap: 0.5rem;
     width: 100%;
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: start;
-    flex-direction: column;
     text-align: left;
     background-color: #fff5a8;
     border-radius: 3px;
