--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,6 @@
-.conteinerOnline {
-    width: 70vw;
+.tela-inferior-mensagens {
+    border-radius: 2px;
+    width: 90vw;
     display: flex;
     align-items: start;
     justify-content: space-between;
@@ -31,6 +32,7 @@
 }
 
 .painel-email {
+    min-width: 20rem;
     gap: 0.5rem;
     display: flex;
     align-items: start;
@@ -40,7 +42,7 @@
     background-color: #d2d2d2;
 }
 
-.mensagens-funcao {
+.painel-mensagens {
     width: 100%;
     height: 60vh;
     overflow-y: auto;
@@ -58,7 +60,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
     border-radius: 3px;
     gap: 1rem;
     min-width: 10rem;
@@ -93,4 +95,20 @@
     background-color: #fff5a8;
     border-radius: 3px;
     padding: 0.5rem;
+}
+
+.mensagens-funcao {
+    padding: 0.5rem;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.badge-numero {
+    padding: 0.5rem;
+    border-radius: 9999px;
+    background: #e53935;
+    color: #fff;
 }
