--- a/css/estilo.css
+++ b/css/estilo.css
@@ -384,6 +384,10 @@ input:focus {
 }
 
 button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
     background: linear-gradient(45deg, #323639, #5b707f);
     border: solid 1px #222;
     padding: 10px 20px;
@@ -930,6 +934,9 @@ input[type="file"] {
 }
 
 .menu-btn {
+    padding: 8px;
+    gap: 0px;
+    flex-direction: column;
     background: none;
     border: none;
     cursor: pointer;
@@ -939,7 +946,7 @@ input[type="file"] {
     width: 25px;
     height: 2px;
     background: white;
-    margin: 5px 0;
+    margin: 3px 0;
     transition: 0.4s;
 }
 
