--- a/css/orcamentos.css
+++ b/css/orcamentos.css
@@ -83,3 +83,13 @@
     border-radius: 5px;
     background-color: #5f5f5f;
 }
+
+.tela-orcamento {
+    background-color: white;
+    width: 100%;
+    padding: 1rem;
+}
+
+.orcamento-documento {
+    background-color: white;
+}
