--- a/css/chat.css
+++ b/css/chat.css
@@ -116,7 +116,7 @@
 
 .menu-chat-superior {
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 5px;
