--- a/css/folha.css
+++ b/css/folha.css
@@ -35,7 +35,6 @@
     width: 100%;
     border-collapse: collapse;
     border: solid 1px #222;
-    font-size: 5vw;
 }
 
 .tabCab td {
@@ -94,7 +93,6 @@
     width: 100%;
     border-collapse: collapse;
     border: solid 1px #222;
-    font-size: 5vw;
 }
 
 .tabelaPonto td {
@@ -135,11 +133,7 @@
     display: flex;
     align-items: center;
     justify-content: end;
-    gap: 1vw;
-}
-
-.painelFiltros img {
-    width: 20vw;
+    gap: 0.5rem;
 }
 
 .painelFiltros button {
@@ -162,19 +156,4 @@
     border: solid 1px red;
     border-radius: 5px;
     background-color: #f7c5c5;
-}
-
-@media screen and (orientation: landscape),
-screen and (min-aspect-ratio: 13/9) {
-
-    .painelFiltros img {
-        width: 5vw;
-    }
-
-    .tabCab table,
-    .tabelaPonto table {
-        font-size: 1.4vw;
-    }
-
-
 }
