--- a/css/estilo.css
+++ b/css/estilo.css
@@ -400,7 +400,7 @@ button {
 
 .janela {
     max-width: 90vw;
-    overflow: auto;
+    overflow: hidden;
     max-height: 80vh;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
